# cpp-cookbook

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
src/: CMakeLists.txt  main.cc
src/employee/: CMakeLists.txt  employee.cc  employee.h
