cmake_minimum_required(VERSION 3.10)

project(cpp-cookbook)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(COOKBOOK_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(COOKBOOK_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(COOKBOOK_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(EMPLOYEE_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/employee)

include_directories(${COOKBOOK_INSTALL_INCLUDE_DIR})
include_directories(${EMPLOYEE_HEADERS_DIR})

add_subdirectory(src)